--- a/q/274951.html
+++ b/q/274951.html
@@ -26,13 +26,44 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>615</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
-<tr d-ix="1"><td>838</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>764</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="1"><td>615</td><td>Python</td><td>240819T183943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275054#275054">Kolen Ch</a></td></tr>
 <tr d-ix="2"><td>049</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="4"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, 615 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> <s>1053</s> <s>838</s> 764 bytes</h1>
+<pre><code>/^(0|1)$/bz;x;s/^/0001/;x
+:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
+G;s/(.*)\n(.*)/\2\n\1/
+:b;y/10/ab/;G;s/\n//2
+:c;s/(.*)\b([ab]{2,})\b( *)/\2\n\3\1/
+h;s/\n.*//;s/^/....\n.\n/;:d
+s%(.*)\n(.*)\n(.*)%sed 's/^\1$/\2\2\&amp;/;T;s/\2/\&amp;\\n/2g;q;:;i\1\1\1\1\\n\2\2'&lt;&lt;&lt;\3%e
+/\n$/!bd;s%.*%sed '1h;1d;x;2!s/.//;T;/^$/i\\\\n\n:;x'&lt;&lt;&lt;'&amp;'%e
+s//sed '2~2{H;d};$x'&lt;&lt;&lt;'&amp;'/e
+s/(.)\n/\1/g;y/\n/ /;G;s/\n\w*\n/ /
+/[ab]{2}/bc;h;s/\n.*//;y/ /\n/
+:e;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;te
+/aa+\n./s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
+s/\n(\n*)/\1/g;/\n/be
+y/ab/#\n/;G;s/\n.*\n/ /
+T;s/^(#*) \1(\w*)$/\2/;tz;s/#* //
+s/(#*)(\w*)/\2\n\1/;h;s/\n.*//;T
+s/10(0*)(1*)$/01\2\1/;t
+s/(0*)0(1*)/\21\1/;t
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
+:;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
+:z
+</code></pre>
+<p><a href="https://tio.run/##TVLLbtswELzzKxj4IVmttaSctLWYY4HkUKCX3MIYIC3WUWFTqig7dh799Lq7ctSaAoTl7sxwdsngiuNePas9H/B627alX/HNdt2W9drx0mMq8OBq15jWFdweuHdP69K7wDfO@MDbR8dvv3/7ykNtli4OrogCr7zjO9OUxq7dhK8caiyrukSBauca/qOpNh2xbtyurLaBN1ufYqYM/Oc2tHy5dqYJvGyPsIjFq5wMwaJFFWABQggJas9yg9t7OZ0/wHgAK3UAmc0urz59/jIH0YeAmIGA@QBUS3gBsGI3GMRpMtGe/qAz7bUEllvSEGAsKIJoD5CxfNmjbXxv7MNL9vGNYt4zZ8R97PBpAtB5THHhFhVUXrAw@n/a6T/CMfEIkVoOSSXTY1B3pJGBHmvkZSv1S@Wq1PL9w5MQF11fX@vZyDE8bQgXtlBhlCYnOfmoZIFDyi4CpEB6sBhCqTVxfa72RI7GEbIDQEfJfmcvt6p4U8O@CFSMU/QJ2BdNFSPeD0Q/Jd2WwWkUb2CX6qz3A9YQwHKHOau9BQunyIChyFCujzCHYYvNGPMBFQB9J52xaeN5hLomNQY7yilKjB6bTY1t7f8V2nPXOFrt6VbIN9mwjh3oNgd0DzfvLk/@adaLeJBMuJYxdjWha0Avz/ReEg5AU8ByV@tfyHmndwiQIhYIkcQWEkEIaYmIWUFpJMpTEh8Wvj3VNTjGhSM6d0QGz8T3ylqWPx@PgkmWsRm7ZFds/qeq27Ly4Tht/gI" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
+<p>this does basically the same thing that the other answers are doing. we come up with a way to generate an infinite list of matrices <a href="https://tio.run/##VY7BTsMwDIbveQpLINZWgJMd1xfYA3DsJdq8NqhLqsRZ2csTnE4g4YP9@7N/y4nOpRzVQR3VokaV8L0bPGL/IdLoRndtY7r2GbUZ9oPBnoVXqivGYW8e8I4GNfbVji8SwsoT8OQSnMKZYHXzDJ85sbSenc8EIfOSWfQIV8vRnSjBJYYrrJNlulGExDZu85udxXAPGcQBzsthklKbhsZX@L1jjJZ45Fr/r24/pCmsG/P0xbBb7Eg7CJe/F9qiv8PCLvhU3uIP" rel="nofollow noreferrer">(check the order here)</a>, calculate the value of each matrix <a href="https://tio.run/##bVLbUtswEH33V4gxdohDvJahF6wMw1v7AbxFMCNjk5gEhdpOm04m/fSmZ2VMAlNNRj7Zy9mzq23KYr//TTIhk5P6phrSlij1sgfAszga6vxsavK7bXq@YyxgsWd@NCSdaqsvtMR9Sd7cZcYREcA9IGi8rOj4/BC4BPZpMpHpxeWnz1@@XvmJvCZXZTiJIy3BGg/j6BrMpNrSc6nxVoe7kFKVLTh0moyv7qIhCwsJtVMtEbvwXrXaw01NWYhxLQZNcK/T00CHGqJkoFpVIRE4HUwmk4G@GFDp3bLQrWMf7Yhr0ky1hZc9wjGVMFPow4RJ9fIp6SE34Sd05UMKxydEM1bkj4aQxwp/o/OY3qk80qfTTl0wg7RXVRKqkBYjkdlHFGKGzY3jdPk3nD/YKNkEcRRwY/IEMAjUraL7U6pOtFWZ2nR06eCG53/CI4UMvJNLT/@k2@@q2KnTLi7kWbgXQRyEc8NAot@MaW7uImfwqN8Kyh/Uu9dnB4XCJQtXMHuCOdc2p5w6ZMgwMmzrEWyA7ZOH7whs9KZzXFsxQA0TG6M26AooMjo0zy/odvPmaI@bwJi05T3lNlhG/uRlSy51vITm4xKa4yXk8BzvufdFOy/F0jSteFyta1HZl3XbCFOXzlHZovpZFWuzFD/WpqiNhXP12CWt7EysbHkufs2rhznu0oKkfjZti94MWMSsropzRK4WjVhWizLzPF8kOO56w1L@H3cx@MkkkULisAsRzvABH2L2LlGyQTLskJccn85z@DLkfzhsY9x/e7uXHMiSrsRrVB/5vkQnQspjjr@rl7Za2WY/rv8B" rel="nofollow noreferrer">(check the math here)</a>, and then see if it's equal to the input. The two individual steps are fast and easy enough to check edge cases with; it's only the combined loop that takes a long time.</p>
+<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up.</p>
+<p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
+<p>we're back into the triple digits! it's about twice as fast as it used to be for 5 &amp; 9, and the gains get even better as size increases (it still can't handle big inputs like 6 on TIO yet though). I'm not going to add any really detailed explanation yet; golfing can change an explanation a lot in sed since changing how you're storing or transforming the data itself is more effective when golfing than just finding a different way to say the same thing. once the golfing starts slowing down I'll start breaking things down and explaining them.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python, 615 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from numpy import*
 Z=zeros
 r=range
@@ -59,39 +90,6 @@ lambda n:&quot;;&quot;.join(&quot;&quot;.join(map(str,map(int,l)))for l in g(n))
 67 -&gt; 11111000;00000000;00000000;00000000;10001000;00000000;00000000;00000000
 78 -&gt; 11111010;00000000;00001000;00000000;10101000;00000000;00000000;00000000
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>1303</s> <s>1252</s> <s>1201</s> <s>1053</s> 838 bytes</h1>
-<pre><code>/^(0|1)$/bz;x;s/^/0001/;x
-:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
-G;s/(.*)\n(.*)/\2\n\1/
-:b;y/10/ab/;G;s/\n//2
-:c;s/(.*)\b([ab]{2,})\b( *)(\n#*)/\2\n\3\1\4/
-h;s/\n.*//;s/^/.\n.\n/
-:d;s/(\.*)\n(\.*)/\1\1\1&amp;\2/
-s%(.*)\n(.*)\2\n(.*)%sed 's/^\1$/\&amp;/;t;i\1\\n\2\2\nq;:;s/\2/\&amp;\\n/g;1i\2\2'&lt;&lt;&lt;\3%e
-/\.\n\./td
-s%(\.*).(.*)%sed 'x;1s/.*/\1/;1!s/.//;T;/^$/i!\n:;x'&lt;&lt;&lt;'\2'%e;s/!/\n/
-s/.*/sed '2~2{H;d};$x'&lt;&lt;&lt;'&amp;'/e
-s/(.)\n/\1/g;y/\n/ /;G;s/\n[ba]*\n/ /
-/[ab]{2}/bc;h;s/\n.*//;s/[ab]/&amp; /g;y/ /\n/
-:j;s/b\nb/b/;s/b\na/a/;s/a\nb/a/;s/a\na/aa/;tj
-/aa+\n./s/.*/sed -rn 'h;sa.aa;x;:;sa.*a\&amp;amp;T;x;sa.aa;x;t'&lt;&lt;&lt;'&amp;'/e
-s/\n(\n*)/\1/g;/\n/bj
-y/a/#/;s/b//;G;s/\n.*\n/ /
-T;s/^(#*) \1([01]*)$/\2/;tz;s/#* //
-s/^(#*)([01]*)$/\2\n\1/;h;s/\n.*//;T
-s/10(0*)(1*)$/01\2\1/;t
-s/(0*)0(1*)/\21\1/;t
-y/1/0/;s/.*/&amp;&amp;&amp;&amp;/
-:;G;s/\n.*\n/\n/;h;s/\n.*//;x;bb
-:z
-</code></pre>
-<p><a href="https://tio.run/##VVLBctowEL3rK5QBjHEbr2WStlg5dqY5dKaX3BCZkUAlZkB2LZES0vTTS3dFSSgw9vL09u3b1Xq7OOzkXu54j7fbEGq35JvtOtTt2vLaIeS5t63tdLALbp64sz/XtbOeb6x2nocHy2@/ff3MfavnNvV2MfS8cZY/6q7WZm1HfGlRY960NQo0j7bj37tmExPbzj7WzdZzUswRqj1fbX3g87XVned1OMB9WvwSoz4Y9Cg93ENRFALkjlUa/07F5WQGSQ@W8glEOb66/vDx0wSKUwjI6RUw6YEMxC8AluwLBmmejZSjJ6hSOSWAVYY0CtAGJFGUAyhZNT@xTTrVZvZcvn@hmGejVLneKX@shLoC9hDz8gwges0xRhlWLUhEHWuqWFTQN1ElMD94M0Na9B7gIPkQJZTog0rQvawxAQuVRPkhKypU4hFi2Lyo6WB4c3OjxgPLQGFZlUNYkDoVzN9Ud1J4QIvYsxQXGKLZOwn3fagvlKvkjmSGqDawWOSC5sBiQswuf5fPt3LxIvtHXjIEy2hC2AFJ0kVgxE8znBo9yyLA4Di/FzBz@d@gCIeEx1we61UrhI1yBgwcIw2aIk3YKUIMw7Bi@H6HavBq87JzfIg1dK417k1FUaZVojct9rp7PQjnPdDduHg36IRsmBV7wmK9aAFOHeX/2rmjK05xA7gS6bQQswzXFO9Ehj1tXcaB5hYZZ8dx187bv0OSKNICWYIohUASUgJNFdGCYEwURxBXFLdYxk4T/OCszn3h71x8J41h1f5wEKxkY3bFrtnkT9OGunH@cNn9BQ" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
-<p>this does basically the same thing that the other answers are doing. we come up with a way to generate an infinite list of matrices <a href="https://tio.run/##VY7BTsMwDIbveQpLINZWgJMd1xfYA3DsJdq8NqhLqsRZ2csTnE4g4YP9@7N/y4nOpRzVQR3VokaV8L0bPGL/IdLoRndtY7r2GbUZ9oPBnoVXqivGYW8e8I4GNfbVji8SwsoT8OQSnMKZYHXzDJ85sbSenc8EIfOSWfQIV8vRnSjBJYYrrJNlulGExDZu85udxXAPGcQBzsthklKbhsZX@L1jjJZ45Fr/r24/pCmsG/P0xbBb7Eg7CJe/F9qiv8PCLvhU3uIP" rel="nofollow noreferrer">(check the order here)</a>, calculate the value of each matrix <a href="https://tio.run/##bVLbUtswEH33V4gxdohDvJahF6wMw1v7AbxFMCNjk5gEhdpOm04m/fSmZ2VMAlNNRj7Zy9mzq23KYr//TTIhk5P6phrSlij1sgfAszga6vxsavK7bXq@YyxgsWd@NCSdaqsvtMR9Sd7cZcYREcA9IGi8rOj4/BC4BPZpMpHpxeWnz1@@XvmJvCZXZTiJIy3BGg/j6BrMpNrSc6nxVoe7kFKVLTh0moyv7qIhCwsJtVMtEbvwXrXaw01NWYhxLQZNcK/T00CHGqJkoFpVIRE4HUwmk4G@GFDp3bLQrWMf7Yhr0ky1hZc9wjGVMFPow4RJ9fIp6SE34Sd05UMKxydEM1bkj4aQxwp/o/OY3qk80qfTTl0wg7RXVRKqkBYjkdlHFGKGzY3jdPk3nD/YKNkEcRRwY/IEMAjUraL7U6pOtFWZ2nR06eCG53/CI4UMvJNLT/@k2@@q2KnTLi7kWbgXQRyEc8NAot@MaW7uImfwqN8Kyh/Uu9dnB4XCJQtXMHuCOdc2p5w6ZMgwMmzrEWyA7ZOH7whs9KZzXFsxQA0TG6M26AooMjo0zy/odvPmaI@bwJi05T3lNlhG/uRlSy51vITm4xKa4yXk8BzvufdFOy/F0jSteFyta1HZl3XbCFOXzlHZovpZFWuzFD/WpqiNhXP12CWt7EysbHkufs2rhznu0oKkfjZti94MWMSsropzRK4WjVhWizLzPF8kOO56w1L@H3cx@MkkkULisAsRzvABH2L2LlGyQTLskJccn85z@DLkfzhsY9x/e7uXHMiSrsRrVB/5vkQnQspjjr@rl7Za2WY/rv8B" rel="nofollow noreferrer">(check the math here)</a>, and then see if it's equal to the input. The two individual steps are fast and easy enough to check edge cases with; it's only the combined loop that takes a long time.</p>
-<p>tio will finish on small numbers like 5 and 9, but even 6 is asking a bit much of it. hopefully my golfing will speed things up.</p>
-<p>the <code>\&amp;amp;</code> is not an html error, at this point I have started using sed to write and modify sed scripts to build this answer with and when I saw it show up inside of a command I thought it was too cute to change it back. (the actual command it's part of is <code>sa.*a\&amp;amp</code>, or more legibly written as <code>s/.*/\&amp;/mp</code>)</p>
-<p>we're back into the triple digits! this golf also brought massive performance improvements; it's about twice as fast for 5 &amp; 9, and the gains get even better as size increases (it still can't handle big inputs like 6 on TIO yet though). I'm not going to add any really detailed explanation yet; golfing can change an explanation a lot in sed since changing how you're storing or transforming the data itself is more effective when golfing than just finding a different way to say the same thing. once the golfing starts slowing down I'll start breaking things down and explaining them.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>50</s> 49 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞Íonîü2íε`U0LsãεXô}Σ˜O]í€`.Δ[D˜g5‹#2δô2ô€øOOn}OOQ
