--- a/q/39993.html
+++ b/q/39993.html
@@ -26,24 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>002</td><td>Vyxal</td><td>240820T201408Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/275071#275071">emanresu</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Vyxal</td><td>240820T201408Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/275071#275071">emanresu</a></td></tr>
 <tr d-ix="1"><td>155</td><td>Perl 5 + p0513</td><td>240820T200438Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/275070#275070">Dom Hast</a></td></tr>
 <tr d-ix="2"><td>003</td><td>APL</td><td>141020T043751Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/40048#40048">jimmy230</a></td></tr>
 <tr d-ix="3"><td>004</td><td>GolfScript</td><td>141018T220245Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/40012#40012">Optimize</a></td></tr>
 <tr d-ix="4"><td>007</td><td>Golfscript</td><td>141018T084931Z</td><td><a href="https://codegolf.stackexchange.com/questions/39993/write-a-square-program-that-outputs-the-number-of-times-it-has-been-unrolled/39995#39995">John Dvo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <code>N=2</code></h1>
-<pre><code>››
-00
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <code>N=3</code></h1>
+<pre><code>› ›
+›› 
+0  
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLigLrigLpcbjAwIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLigLog4oC6XG7igLrigLogXG4wICAiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Unrolled:</p>
-<pre><code>  ›
-00›
+<pre><code>   ››
+   › 
+0   ›
+
+     ››
+0   › ›
+
+       ›
+0   › ››
+0   › ›››
 </code></pre>
-<pre><code>00››
-</code></pre>
-<p><code>›</code> increments a number, so the rolled version prints <code>0</code>, the once-unrolled version prints <code>0+1=1</code>, and the twice-unrolled version prints <code>0+1+1=2</code>. This could probably be extended to arbitrary-sized grids.</p>
+<p><code>›</code> increments a number, so the rolled version prints <code>0</code>, the once-unrolled version prints <code>0+1=1</code>, the twice-unrolled version prints <code>0+1+1=2</code> and so on. This could probably be extended to arbitrary-sized grids.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-p0513</code>, 155 bytes, <code>N</code>=12</h1>
 <p>Not particularly competitive, but it was fun trying to get to this point. I tried with <code>1</code>s originally, but struggled to make it work with <code>1</code>s only separated by newlines. Also <a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiIyAgICAjXG4gIyAgIztcbiAgIyMgd1xuICMgIyBxXG4jICAgIz1cbiRcXCs9KCkiLCJhcmdzIjoiLXAwNTEzIn0=" rel="nofollow noreferrer">investigated using just list length (<code>N</code>=6)</a> but had issues without using <code>length</code> and <code>join</code>.</p>
