--- a/q/269233.html
+++ b/q/269233.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>033</td><td>Arturo</td><td>240804T160605Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/274671#274671">chunes</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Arturo</td><td>240804T160605Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/274671#274671">chunes</a></td></tr>
 <tr d-ix="1"><td>018</td><td>Pip</td><td>240301T080133Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/271448#271448">DLosc</a></td></tr>
 <tr d-ix="2"><td>055</td><td>Clean</td><td>240301T071148Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/271447#271447">Wheat Wi</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Japt</td><td>240116T173324Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/269297#269297">noodle p</a></td></tr>
@@ -49,10 +49,10 @@
 <tr d-ix="20"><td>013</td><td>K ngn/k</td><td>240114T214144Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/269238#269238">ovs</a></td></tr>
 <tr d-ix="21"><td>009</td><td>Jelly</td><td>240114T203449Z</td><td><a href="https://codegolf.stackexchange.com/questions/269233/mousetails-sequence/269234#269234">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
-<pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n[(n&lt;3)?-&gt;n-&gt;1+f-n f-f-n&lt;=1]
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>33</s> 31 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n[?n&lt;3-&gt;n-&gt;1+f-n f-f-n&lt;=1]
 </code></pre>
-<p><a href="http://arturo-lang.io/playground?7Ud7IT" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="http://arturo-lang.io/playground?qIUaC2" rel="nofollow noreferrer">Try it!</a></p>
 <p>Port of Arnauld's <a href="https://codegolf.stackexchange.com/a/269235/97916">JavaScript answer</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 18 bytes</h1>
