--- a/q/274924.html
+++ b/q/274924.html
@@ -26,24 +26,66 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>098</td><td>Google Sheets</td><td>240822T215719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275099#275099">doubleun</a></td></tr>
-<tr d-ix="1"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
-<tr d-ix="2"><td>010</td><td>Nekomata + n</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
-<tr d-ix="3"><td>010</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
-<tr d-ix="4"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
-<tr d-ix="5"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
-<tr d-ix="6"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
-<tr d-ix="7"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
-<tr d-ix="8"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
-<tr d-ix="9"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
-<tr d-ix="10"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
-<tr d-ix="11"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
-<tr d-ix="12"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
-<tr d-ix="13"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
-<tr d-ix="14"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
-<tr d-ix="15"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
+<tr d-ix="0"><td>166</td><td>Scala 3</td><td>240824T094435Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275126#275126">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>098</td><td>Google Sheets</td><td>240822T215719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275099#275099">doubleun</a></td></tr>
+<tr d-ix="2"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="3"><td>010</td><td>Nekomata + n</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
+<tr d-ix="4"><td>010</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="5"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
+<tr d-ix="6"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
+<tr d-ix="7"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
+<tr d-ix="8"><td>025</td><td>APLDyalog Unicode</td><td>240813T060050Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274954#274954">akamayu</a></td></tr>
+<tr d-ix="9"><td>049</td><td>Retina 0.8.2</td><td>240812T223756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274943#274943">Neil</a></td></tr>
+<tr d-ix="10"><td>016</td><td>Charcoal</td><td>240812T214353Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274941#274941">Neil</a></td></tr>
+<tr d-ix="11"><td>057</td><td>APL+WIN</td><td>240812T172556Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274934#274934">Graham</a></td></tr>
+<tr d-ix="12"><td>065</td><td>Setanta</td><td>240812T163243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274931#274931">bb94</a></td></tr>
+<tr d-ix="13"><td>107</td><td>Python</td><td>240812T163527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274932#274932">shape wa</a></td></tr>
+<tr d-ix="14"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
+<tr d-ix="15"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
+<tr d-ix="16"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 98 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 166 bytes</h1>
+<p>166 bytes, it can be golfed more.</p>
+<hr />
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=RU_BSgMxEL3nK4bSQ9LulrarVtbdgngS9FQ8iUisSYmss5qkpSbsl3jpxeLFD_JvnN0WDHkzzDDvzZvPvVvKSma7n_rpRS093EqDEL_WXqfnv_tnpUFzzK_RJ66N5UR0KbKNtCDLhXrn42QsujKUjuna8sciHfsaMJ2IyIwGLkfOBDVHEa3ya4sgOYqGyeGw5AFoNAymNNyRt0VKFazRmyqGMgyyi9CI2M7SspE2VcUzwbfEJwXSYc3R7TdA6_eVLuDSrlwOl9bKj_uFtwZXDyKHOzQeSogM6G1kBV45fyWdctS9Mc7TLTBJYEr_jDBL4DQjnFA3y2ai45FJ4AhF-s8WR0mAN1rlK-Su10dI59CPuj21d6A2rMXR7253yH8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>def f(n:Int,s:Int=1):Int={
+var a=Seq(0,0)
+var z=s
+for(_&lt;-0to n-1){
+if (a.size&gt;n){return a(n)}
+a++=(z to z*2-1)
+for(x&lt;-z*2 until{z=z*3;z}){a++=Seq.fill(3)(x)}
+}
+a(n)
+}
+</code></pre>
+<p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=VVJLTsMwFBTbnmJUdWHTtGproAhoJcQKCVYVbBBCpiTFyLwi20FFUU7Cphs4FKfgCDiJkwbJn-fxs2c8z5_fdim1FNvtV-qSwfHP3u_68SVeOlxLRcg6wFOcIGF0gktyEWw5Y4Yxr6MiCXiXBtKvrpR1bBRhxBvY3vphBlsCydqAPeBsgBFSckqDeLgCUAmYHOqYVu4Z8_YOYGKXGoJkxAOWh7mglej3wUqm6tYy3MekTi55NwVvvRMSs1peBYvTMsrb1A1B8bhhorRmgrPNfx3VGOTlneDcq7eRSbPyvp0bIz_uFs4oWt17925Ite3TcLF1F9LGtmXjOMLEtyPfpxEOhe8HHhViynd2UvGs5vRO-ZuncpqY7fYIgzl6mS8kz7u8EZx38qrwof71P_gD" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>object Main {
+  def f(n: Int, s: Int = 1): Int = {
+    var a = List(0, 0)
+    var sVar = s
+    for (_ &lt;- 0 until n) {
+      if (a.length &gt; n) {
+        return a(n)
+      }
+      a = a ++ (sVar until sVar * 2)
+      for (x &lt;- sVar * 2 until {sVar = sVar * 3; sVar}) {
+        a = a ++ List.fill(3)(x)
+      }
+    }
+    a(n)
+  }
+
+  def main(args: Array[String]): Unit = {
+    val testCases = List(0, 1, 2, 26, 27, 53, 54, 1337)
+    for (n &lt;- testCases) {
+      println(s&quot;$n -&gt; ${f(n)}&quot;)
+    }
+  }
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 98 bytes</h1>
 <pre><code>=let(t,base(A1,3),decimal(switch(--left(t),0,0,1,iferror(2&amp;mid(t,2,len(t)-2)),2,1&amp;mid(t,2,99)),3))
 </code></pre>
 <p>Put <span class="math-container">\$n\$</span> in cell <code>A1</code> and the formula in <code>B1</code>.</p>
@@ -62,7 +104,7 @@
 )
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
@@ -75,7 +117,7 @@
 <p><a href="https://tio.run/##Dc1BCoMwEADAc/OKPWaxokEKRWqf0C@UNLpViLthjWBfn3qa46RfnoW7e9JSaIh@/YweuOen8zzWlpume5A9@sFVZLl2iFgdhVRWoJ1DFokbLGsSzRB1fwcf5gn8BjEYguHEvoQntITGkCgwLAzq@TvZ9upuLfbmknThbPl6DojlDw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Recursive magic based on the original definition, copied from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's JS answer</a>. Thanks to Albert Lang for -2 bytes using the walrus.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-n</code>, 10 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-n</code>, 10 bytes</h1>
 <pre><code>R~3DᵉlhÖ*ž
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJunlLsgqWlJWm6FuuC6oxdHm7tzMk4PE3r6L4lxUnJxVCpBdsMuAy5jLiMzLiMzLlMjblMTbgMjY3NIbIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -106,7 +148,7 @@ R~              Choose a number from 1 to the input
 </code></pre>
 <p><code>-1</code> finds the first valid solution.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>-3 bytes porting <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">Dominic van Essen's</a> implementation of my approach.</p>
 <pre><code>b3ḢḂȧ%3¬)S
 </code></pre>
@@ -144,7 +186,7 @@ b3         -   convert {I} to base three
             ċ - count occurrences of {N}
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
+<div id="pu5" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
 <pre><code>,|,$~*%$3- 2/`@3
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWG3RqdFTqtFRVjHUVjPQTHIwhwlDZBRsNuAy5jLiMzLiMzLlMjblMTSASAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -163,7 +205,7 @@ b3         -   convert {I} to base three
              `@3$   #     element in base 3
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 15 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>_+3Bć©3αì®i¨}3ö
 </code></pre>
 <p><a href="https://tio.run/##ASEA3v9vc2FiaWX//18rM0LEh8KpM86xw6zCrmnCqH0zw7b//zA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AUYAuf9vc2FiaWX/dnk/IiDihpIgIj95RP9fKzNCxIfCqTPOscOswq5pwqh9M8O2/yz/WzAsMSwyLDI2LDI3LDUzLDU0LDEzMzdd" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -185,7 +227,7 @@ b3         -   convert {I} to base three
                 # (which is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>41</s> 40 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(n)`if`(n&lt;2,0,(k=?n-1)+!n%/%3-?1+k)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3NRLsE2xjNPI0EzLTEjTybIx0DHQ0sm3t83QNNbUV81T1VY117Q21szWh6qvSNAw0lRV07RQMuNI0DBFMIwjTkIsrJ7GgIKdSw9DK0EwnTZOLSxkoaQaVNQfzzKE8CxDP1BjCMzID80ygPLBKQ2NjqFozCwuICxYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -194,13 +236,13 @@ b3         -   convert {I} to base three
 <pre class="lang-r prettyprint-override"><code>f=\(n)`if`(n&lt;2,0,f(n-1)+(n%/%3==f(1+f(n-1))))
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu8" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>25 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Direct implementation of the problem description.</p>
 <pre><code>(3⊥3|(-1=⊃)↓+⍨@1)3⊥⍣¯1⌈∘1
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=0zB@1LXUuEZD19D2UVez5qO2ydqPelc4GGqCxB/1Lj603vBRT8ejjhmGAA&amp;f=Szu0wkDBUMFIwchMwchcwdRYwdREwdDY2BwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 49 bytes</h1>
 <pre><code>.+
 $*#
 #
@@ -226,7 +268,7 @@ $1$.2
 </code></pre>
 <p>Count those starting with <code>2</code> or ending in <code>0</code> (but taking care not to count <code>0</code> itself or to double-count numbers that both start with <code>2</code> and and in <code>0</code>).</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>ＩＬΦＥＮ↨⊕ι³¬∧⌕ι²⊟ι
 </code></pre>
 <p><a href="https://tio.run/##JYvBCoNADER/xWMEe2j34MGTLRQKKv5Cuoa6sGaXNfr7MdA5PJjHjF@x@IRRdS6BBV64CwzEP1nhHaJQgREzfDgfMh3b13rdVE/cyZwvtBELLRBMutowJYGeF/saQlM9zM0p2@CfTvXuXKu3M14" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Uses @JonathanAllan's observation that <code>f(a)</code> is the number of members of <code>A003605</code> between <code>1</code> and <code>a</code> inclusive.</p>
@@ -249,12 +291,12 @@ $1$.2
                     Implicitly print
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>APL+WIN, 57 bytes</h1>
+<div id="pu11" class="pu"><h1>APL+WIN, 57 bytes</h1>
 <pre><code>⍎∊((n←⎕)=0)↑⊂'n⋄→'⋄3⊥(-i)↓((1+i←2|↑n),1↓n←((⌊1+3⍟n)⍴3)⊤n)
 </code></pre>
 <p><a href="https://tio.run/##FU1LCsIwFNznIn2hFppG7coDCIpnKJVKIUShK8GVSC3RFj@4dqM38ERzkfiymHnDfHjFziTrfWG2m6Q0RdPUpcfwWi7Q3rRgNV@xUgLdufLoB3SOyLLFkZylEu0d7hhZXE5oHxEfDfelpObkSaTimrvZgWtWjhR7YUuEq1OxRv@2Ev1PS7iPlZ6fCF@JVFRCMbKAaaCcaaIDjUOmdf4H" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 65 bytes</h1>
 <pre><code>gniomh(n){s:=1nuair-a s*3&lt;=n s*=3toradh(n|0&amp;n/s&lt;2&amp;(n+s)//3)|n-s}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICImoeWCw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
@@ -268,7 +310,7 @@ $1$.2
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 107 bytes</h1>
 <p>Incredibly slow for non-low <code>n</code>, thanks to generating exponentially more terms than needed. For testing purposes, you can get around that by adding <code>if len(a)&gt;n:break</code> to the for loop.</p>
 <pre class="lang-python prettyprint-override"><code>def f(n,s=1,r=range):
  a=[0,0]
@@ -302,7 +344,7 @@ $1$.2
     return arr[n]
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://nodejs.org" rel="noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://nodejs.org" rel="noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&lt;2?0:!(n/3^f(1+f(--n)))+f(n)
 </code></pre>
@@ -315,13 +357,13 @@ $1$.2
 <p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Fast, not sure relation between Arnauld's solution</p>
 </div>
-<div id="pu14" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
+<div id="pu15" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,k=1)=&gt;n&lt;k*3?n/k^1?n&amp;&amp;n-k:(n+k)/3|0:f(n,k*3)
 </code></pre>
 <p><a href="https://tio.run/##dcxLCsIwFEDRuavIqCS1NZ9n01CM3YlQaiOa8iJWHLn3iDQjg@NzubfhNSzj43p/1hjOU4zOUqy8lcwe8eBL6JH7k@yxKLD2HcWtZxzeonPfrAQWx4BLmKfdHC7UUUKIYIxwTsQmE/lX1CoyE6WTtDm1iUxGDaykdE77RL9DCZCG2pj4AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu15" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
 <pre><code>[3τḣ$⌐⇧~p$ċßṪ3β
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJ+IiwiIiwiWzPPhOG4oyTijJDih6d+cCTEi8Of4bmqM86yIiwiIiwiMCAtPiAwXG4xIC0+IDBcbjIgLT4gMVxuMjYgLT4gMTdcbjI3IC0+IDE4XG41MyAtPiAyNlxuNTQgLT4gMjdcbjEzMzcgLT4gNjg4Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
